<resources>
    <string name="app_name">Personas</string>
    <string name="titulo">REGISTRO</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="edad">Edad</string>
    <string name="leer">Leer</string>
    <string name="bailar">Bailar</string>
    <string name="programar">Programar</string>
    <string name="registrar">Registrar</string>
    <string name="borrar">Borrar</string>
    <string name="numero">N°</string>
    <string name="hobbies">Pasatiempos</string>
    <string name="listar">Listar</string>
    <string name="mostrar">Mostrar en Tabla</string>
    <string name="guardar">Guardado Satisfactoriamente!</string>
    <string name="eliminar">Eliminar</string>
    <string name="modificar">Modificar</string>
    <string name="buscar">Buscar</string>
    <string-array name="opciones">
        <item>@string/registrar</item>
        <item>@string/mostrar</item>
        <item>@string/listar</item>
    </string-array>
</resources>
